# Parse_velo1000

./: config.py  main.py  pyproject.toml  trace_main.py
db/: models.py
docs/: todo.md
parsers/: __init__.py  parse_velo1000.py
utils/: database.py  logger.py
